Transaction, Mosaic and Block pagination (#291)
Added Stored interface
Added Searcher interface
Added PaginationStreamer to simplify how to paginate