@@ -16,22 +16,22 @@
 
 package io.nem.symbol.sdk.infrastructure.vertx;
 
+import io.nem.symbol.sdk.api.BlockOrderBy;
 import io.nem.symbol.sdk.api.BlockRepository;
-import io.nem.symbol.sdk.api.QueryParams;
-import io.nem.symbol.sdk.infrastructure.vertx.mappers.GeneralTransactionMapper;
-import io.nem.symbol.sdk.infrastructure.vertx.mappers.TransactionMapper;
+import io.nem.symbol.sdk.api.BlockSearchCriteria;
+import io.nem.symbol.sdk.api.Page;
 import io.nem.symbol.sdk.model.blockchain.BlockInfo;
 import io.nem.symbol.sdk.model.blockchain.MerklePathItem;
 import io.nem.symbol.sdk.model.blockchain.MerkleProofInfo;
 import io.nem.symbol.sdk.model.blockchain.Position;
 import io.nem.symbol.sdk.model.network.NetworkType;
-import io.nem.symbol.sdk.model.transaction.Transaction;
 import io.nem.symbol.sdk.openapi.vertx.api.BlockRoutesApi;
 import io.nem.symbol.sdk.openapi.vertx.api.BlockRoutesApiImpl;
 import io.nem.symbol.sdk.openapi.vertx.invoker.ApiClient;
 import io.nem.symbol.sdk.openapi.vertx.model.BlockInfoDTO;
+import io.nem.symbol.sdk.openapi.vertx.model.BlockOrderByEnum;
+import io.nem.symbol.sdk.openapi.vertx.model.BlockPage;
 import io.nem.symbol.sdk.openapi.vertx.model.MerkleProofInfoDTO;
-import io.nem.symbol.sdk.openapi.vertx.model.TransactionInfoDTO;
 import io.reactivex.Observable;
 import io.vertx.core.AsyncResult;
 import io.vertx.core.Handler;
@@ -51,12 +51,9 @@ public class BlockRepositoryVertxImpl extends AbstractRepositoryVertxImpl implem
 
     private final BlockRoutesApi client;
 
-    private final TransactionMapper transactionMapper;
-
     public BlockRepositoryVertxImpl(ApiClient apiClient) {
         super(apiClient);
         client = new BlockRoutesApiImpl(apiClient);
-        transactionMapper = new GeneralTransactionMapper(getJsonHelper());
     }
 
     @Override
@@ -67,24 +64,22 @@ public class BlockRepositoryVertxImpl extends AbstractRepositoryVertxImpl implem
     }
 
     @Override
-    public Observable<List<Transaction>> getBlockTransactions(
-        BigInteger height, QueryParams queryParams) {
-        return this.getBlockTransactions(height, Optional.of(queryParams));
-    }
-
-    @Override
-    public Observable<List<Transaction>> getBlockTransactions(BigInteger height) {
-        return this.getBlockTransactions(height, Optional.empty());
-    }
-
-    @Override
-    public Observable<List<BlockInfo>> getBlocksByHeightWithLimit(BigInteger height, int limit) {
-        Consumer<Handler<AsyncResult<List<BlockInfoDTO>>>> callback = handler ->
-            client.getBlocksByHeightWithLimit(height, limit, handler);
+    public Observable<Page<BlockInfo>> search(BlockSearchCriteria criteria) {
+        Consumer<Handler<AsyncResult<BlockPage>>> callback = handler -> getClient()
+            .searchBlocks(toDto(criteria.getSignerPublicKey()),
+                toDto(criteria.getBeneficiaryPublicKey()),
+                criteria.getPageSize(),
+                criteria.getPageNumber(), criteria.getOffset(),
+                toDto(criteria.getOrder()), toDto(criteria.getOrderBy()),handler);
 
         return exceptionHandling(
-            call(callback).flatMapIterable(item -> item).map(BlockRepositoryVertxImpl::toBlockInfo)
-                .toList().toObservable());
+            call(callback).map(mosaicPage -> this.toPage(mosaicPage.getPagination(),
+                mosaicPage.getData().stream().map(BlockRepositoryVertxImpl::toBlockInfo).collect(
+                    Collectors.toList()))));
+    }
+
+    private BlockOrderByEnum toDto(BlockOrderBy orderBy) {
+        return orderBy == null ? null : BlockOrderByEnum.fromValue(orderBy.getValue());
     }
 
     @Override
@@ -107,26 +102,10 @@ public class BlockRepositoryVertxImpl extends AbstractRepositoryVertxImpl implem
         return new MerkleProofInfo(pathItems);
     }
 
-    private Observable<List<Transaction>> getBlockTransactions(
-        BigInteger height, Optional<QueryParams> queryParams) {
-        Consumer<Handler<AsyncResult<List<TransactionInfoDTO>>>> callback = handler ->
-            client.getBlockTransactions(height,
-                getPageSize(queryParams),
-                getId(queryParams),
-                handler);
-
-        return exceptionHandling(
-            call(callback).flatMapIterable(item -> item).map(this::toTransaction).toList()
-                .toObservable());
-    }
-
-    private Transaction toTransaction(TransactionInfoDTO input) {
-        return transactionMapper.map(input);
-    }
 
     public static BlockInfo toBlockInfo(BlockInfoDTO blockInfoDTO) {
         return BlockInfo.create(
-            blockInfoDTO.getMeta().getHash(),
+            blockInfoDTO.getId(), blockInfoDTO.getMeta().getHash(),
             blockInfoDTO.getMeta().getGenerationHash(),
             blockInfoDTO.getMeta().getTotalFee(),
             blockInfoDTO.getMeta().getNumTransactions(),
